[gd_scene load_steps=5 format=2]

[ext_resource path="res://Prefabs/HealthConsole/HealthConsole.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/HealthConsole/HealthConsoleModel.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.937118, 0.745108, 0.895076 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.652701, 0.7718, 0.194786 )

[node name="HealthConsole" type="StaticBody"]
collision_layer = 8
collision_mask = 8
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0485651, -0.89965 )
shape = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0739866, -0.0216662 )
shape = SubResource( 3 )

[node name="HealthConsoleModel" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, 0, 0, -4.37114e-08, -1, 0, -1, 4.37114e-08, 0, 0, 0.172544 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
